--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,11 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>juggler</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.0-SNAPSHOT</version>
   <name>juggler</name>
+
+  <scm>
+    <connection>scm:svn:http://code.icecube.wisc.edu/daq/meta-projects/juggler/trunk</connection>
+  </scm>
 
   <build>
     <sourceDirectory>src</sourceDirectory>
