--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <connection>scm:svn:http://code.icecube.wisc.edu/daq/meta-projects/juggler/trunk</connection>
   </scm>
 
+<!-- this breaks 'mvn site'
   <build>
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>test/java</testSourceDirectory>
@@ -32,6 +33,7 @@
       </testResource>
     </testResources>
   </build>
+-->
 
   <dependencies>
     <dependency>
