1278: Remove daq-test-util and new-dispatch from pdaq meta-project

--- a/pom.xml
+++ b/pom.xml
@@ -46,10 +46,10 @@
       <artifactId>daq-log</artifactId>
     </dependency>
 
-    <dependency>
+    <!-- dependency>
       <groupId>edu.wisc.icecube</groupId>
       <artifactId>new-dispatch</artifactId>
-    </dependency>
+    </dependency -->
 
     <dependency>
       <groupId>edu.wisc.icecube</groupId>
