Ostensibly for Issue #1326: Get mvn to build pdaq releases
- Additions to pom.xml files adding a description and scm elements
helpful in generating documentation via mvn site.

- Moving versions of dependencies to top-level pom.xml's
dependencyManagement element rather than leaving them in the
project-specific pom.xml This is to have all dependency version info
in one top-level location.

--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,13 @@
   <artifactId>juggler</artifactId>
   <packaging>jar</packaging>
   <name>juggler</name>
+  <description>The ${project.name} sub-system of the Surface Data Acquisition system for the IceCube Project.</description>
 
   <scm>
-    <connection>scm:svn:http://code.icecube.wisc.edu/daq/meta-projects/juggler/trunk</connection>
+    <connection>scm:svn:http://code.icecube.wisc.edu/daq/projects/${project.name}/trunk</connection>
+    <developerConnection>scm:svn:http://code.icecube.wisc.edu/daq/projects/${project.name}/trunk</developerConnection>
+    <tag>HEAD</tag>
+    <url>http://code.icecube.wisc.edu/daq/projects/${project.name}</url>
   </scm>
 
 <!-- this breaks 'mvn site'
@@ -35,6 +39,9 @@
   </build>
 -->
 
+  <!-- Dependencies for this project.  These should not contain
+  versions.  The versions needed should be specified in the top-level
+  pom's dependencyManagement -->
   <dependencies>
     <dependency>
       <groupId>edu.wisc.icecube</groupId>
@@ -45,11 +52,6 @@
       <groupId>edu.wisc.icecube</groupId>
       <artifactId>daq-log</artifactId>
     </dependency>
-
-    <!-- dependency>
-      <groupId>edu.wisc.icecube</groupId>
-      <artifactId>new-dispatch</artifactId>
-    </dependency -->
 
     <dependency>
       <groupId>edu.wisc.icecube</groupId>
