Issue 7191: Use older Java interface with ZeroMQ3

--- a/pom.xml
+++ b/pom.xml
@@ -124,16 +124,18 @@
       <artifactId>jzmq</artifactId>
     </dependency>
 
+    <!--
+        I'm not sure why, but jzmq-native doesn't work when specified in
+        the top-level pom.xml, only when it's fully qualified here
+    -->
+<!-- Deactivate until I figure out why the new Java interface kills StringHub
     <dependency>
-      <!--
-          I'm not sure why, but jzmq-native doesn't work when specified in
-          the top-level pom.xml, only when it's fully qualified here
-      -->
       <groupId>org.zeromq</groupId>
       <artifactId>jzmq-native</artifactId>
       <classifier>${native.arch}-${native.os}</classifier>
       <version>${jzmq.version}</version>
     </dependency>
+-->
 
     <dependency>
       <groupId>com.google.code.gson</groupId>
