Branch for XML-RPC fix

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>juggler</artifactId>
   <packaging>jar</packaging>
-  <name>juggler</name>
+  <name>DAQ component framework</name>
   <description>The ${project.name} sub-system of the Surface Data Acquisition system for the IceCube Project.</description>
 
   <scm>
@@ -79,9 +79,10 @@
     </profile>
   </profiles>
 
-  <!-- Dependencies for this project.  These should not contain
-  versions.  The versions needed should be specified in the top-level
-  pom's dependencyManagement -->
+  <!--
+      Dependencies for this project.  These should not contain versions.
+      (except for jzmq-native!!)
+  -->
   <dependencies>
     <dependency>
       <groupId>edu.wisc.icecube</groupId>
@@ -105,6 +106,11 @@
 
     <dependency>
       <groupId>org.apache.xmlrpc</groupId>
+      <artifactId>xmlrpc-common</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.xmlrpc</groupId>
       <artifactId>xmlrpc-client</artifactId>
     </dependency>
 
@@ -122,16 +128,23 @@
         I'm not sure why, but jzmq-native doesn't work when specified in
         the top-level pom.xml, only when it's fully qualified here
     -->
+<!-- Deactivate until I figure out why the new Java interface kills StringHub
     <dependency>
       <groupId>org.zeromq</groupId>
       <artifactId>jzmq-native</artifactId>
       <classifier>${native.arch}-${native.os}</classifier>
       <version>${jzmq.version}</version>
     </dependency>
+-->
 
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.xml.parsers</groupId>
+      <artifactId>jaxp-api</artifactId>
     </dependency>
   </dependencies>
 
