Issue 8779: Fix ancient spelling error

--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
     </dependency>
 
     <dependency>
-      <groupId>com.sun.jmdk</groupId>
+      <groupId>com.sun.jdmk</groupId>
       <artifactId>jmxtools</artifactId>
     </dependency>
 
